# kicad-symbol-merge

./: .gitignore  LICENSE  kicad-symbol-merge.py  pyproject.toml  readme.md
kicad_symbol_merge/: __init__.py  merge.py
